Implemented CompensatingRotationMoves